<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dim_10dp"
    android:padding="@dimen/dim_10dp"
    app:cardCornerRadius="@dimen/dim_7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="@dimen/dim_10dp"
                android:layout_width="match_parent"
                android:id="@+id/ivUser"
                android:layout_height="@dimen/dim_250">

            </ImageView>





            <LinearLayout
                android:layout_marginTop="@dimen/dim_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvName"
                    android:text="name"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dim_10dp"
                    >

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailid"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEmail"
                    android:text="id"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dim_10dp"
                    >

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender : "
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGender"
                    android:text="email"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dim_10dp"
                    >

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAge"
                    android:text="age"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/dim_10dp"
                    >

                </TextView>

            </LinearLayout>

            <TextView
                android:layout_margin="20dp"
                android:id="@+id/tvAcceptedOrDeclined"
                android:textSize="20sp"
                android:visibility="gone"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="30dp">

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_10dp"
                android:id="@+id/btnLayout"
                android:orientation="horizontal">
                <Button
                    android:layout_weight=".5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDecline"
                    android:padding="5dp"
                    android:text="@string/decline"
                    android:layout_margin="@dimen/dim_10dp"
                    >

                </Button>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:id="@+id/btnAccept"
                    android:padding="5dp"
                    android:layout_margin="@dimen/dim_10dp"
                    android:layout_weight=".5"
                    />



            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>